# trades-downloader

./: .pre-commit-config.yaml  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
tests/web_utils/: test_rest_connector.py
trades_downloader/web_utils/: auth.py  data_types.py  rest_connector.py
