[tool.poetry]
name = "trades-downloader"
version = "0.1.0"
description = "This repository will let you download market trades from different exchanges."
license = "MIT"
authors = ["cardosofede <federico.cardoso.e@gmail.com>"]
readme = "README.md"
packages = [{include = "trades_downloader"}]
repository = "https://github.com/python-poetry/poetry"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
aiohttp = "^3.8.3"
aiodns = "^3.0.0"
ujson = "^5.5.0"
aioresponses = "^0.7.3"
pytest-asyncio = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
